--- a/Приложение 2.ipynb
+++ b/Приложение 2.ipynb
@@ -3636,7 +3636,7 @@
     "collapsed": true
    },
    "source": [
-    "<h2> 5. Биграммы, наиболее отличающиеся по Gravity и PMI</h2>"
+    "<h2> 5. Биграммы типа существительное+прилагательное, наиболее отличающиеся по Gravity и PMI</h2>"
    ]
   },
   {
