--- a/Приложение 2.ipynb
+++ b/Приложение 2.ipynb
@@ -2954,7 +2954,7 @@
     }
    ],
    "source": [
-    "alevles_frame = process_data('locness_alevels_database.db')\n",
+    "alevels_frame = process_data('locness_alevels_database.db')\n",
     "usarg_frame = process_data('usarg_database.db')\n",
     "brsur_frame = process_data('brsur_database.db')"
    ]
